@@ -40,7 +40,9 @@ Release 1.1 Start 14/02/2021
     directories.
 - 03/07/2021
 22. added prot.c, prot.h, qgetpw functions
-23. added getpwent, getgrent routines
+23. added qgetpwent, qgetgrent routines in qsetpwgr.c
+- 05/07/2021
+24. setuserid.c: use qgepwnam, qgetgrent if USE_QPWGR is set
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
